Fix dark mode colors for the line icons

--- a/src/scss/_dark.scss
+++ b/src/scss/_dark.scss
@@ -77,6 +77,13 @@
                 background: $lightgreen !important;
                 color: $yellow !important;
             }
+
+            .line--each {
+                .icon {
+                    color: $lightgreen !important;
+                    fill: $lightgreen !important;
+                }
+            }
         }
     }
 }
